fixed gap missing for imagesearch

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -254,7 +254,6 @@ a {
     justify-content: center;
     place-items: center;
     margin: 0;
-    gap: 0;
     width: initial;
     max-width: initial;
 
